feature of adding multiple subjects across diff years and semesters has been added