@@ -1,5 +1,8 @@
 package com.college.backlog.controller;
 
+import com.college.backlog.controller.dto.RegistrationDetailsResponse;
+import com.college.backlog.controller.dto.RegistrationRequest;
+import com.college.backlog.controller.dto.VerificationResponse;
 import com.college.backlog.model.Registration;
 import com.college.backlog.repository.RegistrationRepository;
 import com.college.backlog.service.RegistrationService;
@@ -7,6 +10,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.*;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/register")
@@ -19,22 +23,11 @@ public class RegistrationController {
     private RegistrationRepository registrationRepository;
 
     @PostMapping
-    public Map<String, String> register(@RequestBody Map<String, Object> body) {
-
-        String rollNo = (String) body.get("rollNo");
-        String name = (String) body.get("name");
-        String email = (String) body.get("email");
-        String phone = (String) body.get("phone");
-        int yearOfJoining = (Integer) body.get("yearOfJoining");
-        int currentSemester = (Integer) body.get("currentSemester");
-
-        List<Long> subjectIds = ((List<Integer>) body.get("subjectIds"))
-            .stream()
-            .map(Long::valueOf)
-            .toList();
-
+    public Map<String, String> register(@RequestBody RegistrationRequest request) {
         Registration reg = registrationService.register(
-            rollNo, name, email, phone, yearOfJoining, currentSemester, subjectIds
+            request.getRollNo(), request.getName(), request.getEmail(),
+            request.getPhone(), request.getYearOfJoining(),
+            request.getCurrentSemester(), request.getSubjectIds()
         );
 
         return Map.of(
@@ -44,41 +37,41 @@ public class RegistrationController {
     }
 
     @PutMapping("/verify/{regId}")
-    public Map<String, String> verifyRegistration(@PathVariable String regId) {
+    public VerificationResponse verifyRegistration(@PathVariable String regId) {
         Registration reg = registrationRepository.findByRegId(regId)
             .orElseThrow(() -> new RuntimeException("Registration not found with ID: " + regId));
 
         reg.setStatus("VERIFIED");
         registrationRepository.save(reg);
 
-        return Map.of(
-        "regId", reg.getRegId(),
-        "studentName", reg.getStudent().getName(),
-        "rollNo", reg.getStudent().getRollNo(),
-        "status", "VERIFIED"
-    );
-}
+        return new VerificationResponse(
+            reg.getRegId(),
+            reg.getStudent().getName(),
+            reg.getStudent().getRollNo(),
+            reg.getStatus()
+        );
+    }
 
     @GetMapping("/verify/{regId}")
-    public Map<String, Object> getRegistrationById(@PathVariable String regId) {
+    public RegistrationDetailsResponse getRegistrationById(@PathVariable String regId) {
         Registration reg = registrationRepository.findByRegId(regId)
             .orElseThrow(() -> new RuntimeException("Registration not found with ID: " + regId));
 
         List<String> subjectNames = reg.getSubjects()
-        .stream()
-        .map(s -> s.getSubjectName())
-        .toList();
+            .stream()
+            .map(s -> s.getSubjectName())
+            .collect(Collectors.toList());
 
-    return Map.of(
-        "regId", reg.getRegId(),
-        "studentName", reg.getStudent().getName(),
-        "rollNo", reg.getStudent().getRollNo(),
-        "email", reg.getStudent().getEmail(),
-        "semester", reg.getStudent().getCurrentSemester(),
-        "yearOfJoining", reg.getStudent().getYearOfJoining(),
-        "subjects", subjectNames,
-            "status", reg.getStatus(),
-            "registeredAt", reg.getRegisteredAt().toString()
-    );
-}
+        return new RegistrationDetailsResponse(
+            reg.getRegId(),
+            reg.getStudent().getName(),
+            reg.getStudent().getRollNo(),
+            reg.getStudent().getEmail(),
+            reg.getStudent().getCurrentSemester(),
+            reg.getStudent().getYearOfJoining(),
+            subjectNames,
+            reg.getStatus(),
+            reg.getRegisteredAt().toString()
+        );
+    }
 }
